--- a/TravelRoutes/DataSample/Datasets/C1k.1
+++ b/TravelRoutes/DataSample/Datasets/C1k.1
@@ -1,9 +1,6 @@
-NAME : portcgen-1000-10001
+NAME : C1k.1
 COMMENT : portcgen N=1000, seed=10001
-TYPE : TSP
 DIMENSION : 1000
-EDGE_WEIGHT_TYPE : EUC_2D
-NODE_COORD_SECTION
 1 75015 517752
 2 601402 227765
 3 103770 502428
