--- a/TravelRoutes/DataSample/Datasets/E1k.1
+++ b/TravelRoutes/DataSample/Datasets/E1k.1
@@ -1,9 +1,6 @@
-NAME : portgen-1000-10001
+NAME : E1k.1
 COMMENT : portgen N=1000, seed=10001
-TYPE : TSP
 DIMENSION : 1000
-EDGE_WEIGHT_TYPE : EUC_2D
-NODE_COORD_SECTION
 1 80464 9585
 2 192626 548478
 3 351091 714240
